WEBAPP-2969 fix menu z-index

--- a/assets/less/web4-menu.less
+++ b/assets/less/web4-menu.less
@@ -542,6 +542,8 @@ nav {
 }
 
 .navbar-inverse {
+    z-index: 1031;
+
     @media (max-width: 1599px) {
         li.web3-navigation-button {
             a {
